fixed collapsing nav items when tutorial is added (#1756)
* fixed collapsing nav items when tutorial is added

* fixed indentation

--- a/public/editor/stylesheets/editor.less
+++ b/public/editor/stylesheets/editor.less
@@ -715,6 +715,7 @@ body {
   .nav-container {
     min-width: 400px;
     padding: 0 16px 0 20px;
+    white-space: nowrap;
   }
 }
 
